--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><!doctype html>
+    <title>Happy 19th</title>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
